# clouddns

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: ddns.rs  main.rs
src/api/: client.rs  cloudflare.rs  mod.rs  models.rs
src/config/: models.rs
src/tests/: client.rs
