[package]
name = "clouddns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cloudflare = "0.11.0"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
wiremock = "0.5"
serde_json = "1.0"
tempfile = "3.2"
tokio = { version = "1.0", features = ["full", "test-util"] }
