[package]
name = "clouddns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "signal",
] }
